--- a/hugo.toml
+++ b/hugo.toml
@@ -1,4 +1,4 @@
-baseURL = 'https://raisinghops.fr/'
+baseURL = 'https://monumental-alpaca-2b521e.netlify.app'
 title = 'Raising Hops'
 languageCode = 'fr-fr'
 defaultContentLanguage = 'fr'
